# radeonsi_compute

./: 0001-added-radeon-manual-clocking-support.patch  CMakeLists.txt  README.md  amd_abi.cpp  amd_abi.h  amd_abi_test.cpp  ati_chip.cpp  ati_chip.h  ati_pciids_gen.def  code_helper.h  compute_interface.cpp  compute_interface.hpp  computesi.c  computesi.h  divide_precision.cpp  drm_master.cpp  fma_test.cpp  m.conf  main.cpp  mandelbrot.cpp  read_test.cpp  remote_run  sid.h  write_test.cpp
